# demos

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
lib/imgui/: CMakeLists.txt
src/: Arena.cpp  Arena.hpp  Camera.cpp  Camera.hpp  Colors.hpp  Common.hpp  Main.cpp  PackUtils.hpp  TimeMeter.cpp  TimeMeter.hpp  Utils.cpp  Utils.hpp
src/Math/: Hash.hpp  Mat2.hpp  Mat3.hpp  Mat4.hpp  Math.hpp  MathCommon.hpp  Quat.hpp  Types.hpp  Utils.cpp  Utils.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
src/Physics/: Collide.cpp  Collide.hpp  Config.hpp  GJK.cpp  GJK.hpp  Geometry.cpp  Geometry.hpp  MassProperties.cpp  MassProperties.hpp  World.cpp  World.hpp
src/Renderer/: Common.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp  Meshes.cpp  Meshes.hpp  Renderer.cpp  Renderer.hpp  Vulkan.cpp  Vulkan.hpp
src/Renderer/Shaders/: Common.slang  ImGuiRenderer.slang  LineRenderer.slang  Renderer.slang  SceneCommon.slang  ShadowPass.slang  SharedConstants.slang
src/Test/: Test.cpp  TestAlloc.cpp  TestMath.cpp  TestMisc.cpp  TestPhysics.cpp  TestsAll.cpp
